Fixed spacing on palette

--- a/DailyPlanner/Components/Pages/Layout.razor.css
+++ b/DailyPlanner/Components/Pages/Layout.razor.css
@@ -3,7 +3,7 @@
    flex-direction: row;
    width: fit-content;
    box-sizing: border-box;
-   margin: 80px auto;
+   margin: 40px auto;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
    padding: 0;
    border-top-left-radius: 50px;
